Fixed width on mobile, added line height to paragraphs

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -58,9 +58,13 @@ body {
     flex-grow: 1;
     background-color: #fff;
     margin: 2px 0;
-    padding: 40px 200px;
     display: flex;
     justify-content: center;
+    p{
+        width: 75%;
+        padding: 80px 0;
+        line-height: 1.8rem;
+    }
 }
 
 .sticky-layout-footer {
@@ -133,6 +137,7 @@ body {
     align-items: center;
     p{
         width: 60%;
+        line-height: 1.5rem;
     }
 }
 
